# genai-bench

./: pyproject.toml
.github/workflows/: docs.yml  release.yml
genai_bench/: logging.py
genai_bench/sampling/: text.py
genai_bench/user/: azure_openai_user.py  cohere_user.py  openai_user.py  together_user.py
tests/: conftest.py
tests/auth/: test_together_auth.py
tests/sampling/: test_text.py
tests/user/: test_azure_openai_user.py  test_cohere_user.py  test_openai_user.py  test_together_user.py
